# Basic-Portfolio-Manager

./: .gitignore  README.md  package.json  pnpm-lock.yaml
.cursor/rules/: quant.mdc
.github/workflows/: ci.yml
backend/: .env.example  .gitignore  README.md  pyproject.toml
backend/app/: __init__.py  errors.py  main.py  schemas.py  settings.py
backend/app/api/: chat.py  course.py  deps.py  llm.py  optimize.py  routes.py  settings.py
backend/app/data/: __init__.py  cache.py  calendar.py  chat_store.py  fama_french_factors.py  mock.py  rate_limit.py  service.py
backend/app/data/clients/: __init__.py  alpha_vantage.py  fred.py  yahoo.py
backend/app/services/: __init__.py  analytics_service.py  env_store.py  optimize_service.py  returns_frame.py  valuation_service.py
backend/app/services/chat/: __init__.py  intent.py  llm.py  rules.py  service.py
backend/data/factors/: fama_french_m.csv
backend/quant/: __init__.py  allocation.py  capm.py  errors.py  fama_french_3.py  frontier.py  holding_period_monthly.py  linalg.py  markowitz.py  minvar.py  portfolio_risk.py  returns.py  sharpe.py  sim.py  treynor.py  types.py  valuation_cashflow.py  valuation_ddm.py  valuation_eligibility.py
backend/tests/: conftest.py
backend/tests/api/: conftest.py  test_chat.py  test_error_envelope.py  test_failure_injection.py  test_historical.py  test_optimize.py  test_optimize_service.py  test_quote.py  test_risk_free_rate.py  test_settings_api_keys.py
backend/tests/data/: test_alpha_vantage.py  test_cache.py  test_cache_singleflight_stress.py  test_chat_store.py  test_chat_store_concurrency.py  test_dataset_b.py  test_fred.py  test_mock.py  test_rate_limit.py  test_rate_limit_stress.py  test_service.py  test_yahoo.py  test_yahoo_fundamentals.py
backend/tests/fixtures/: av_historical_aapl_small.json  av_quote_aapl.json  av_quote_unknown.json  av_rate_limit_note.json  fred_dgs3mo.json  fred_dgs3mo_dots.json
backend/tests/quant/: test_allocation.py  test_capm.py  test_end_to_end.py  test_frontier.py  test_linalg.py  test_markowitz.py  test_minvar.py  test_properties.py  test_returns.py  test_sharpe.py  test_sim.py  test_treynor_holding_fama.py  test_valuation_cashflow.py  test_valuation_ddm.py  test_valuation_eligibility.py
backend/tests/services/: conftest.py  test_chat_intent.py  test_chat_intent_fuzz.py  test_chat_llm.py  test_chat_rules.py  test_chat_service.py  test_env_store.py  test_valuation_service.py
docs/: CONTRACTS.md  FIXTURES.md  SPEC.md
frontend/: .eslintrc.cjs  .gitignore  README.md  index.html  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/playwright-report/: index.html
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/components/: Header.tsx  IntroBanner.tsx  Questionnaire.tsx  RiskControls.tsx  Settings.tsx  Tabs.tsx  (+1 more)
frontend/test-results/: .last-run.json
frontend/tests/: App.test.tsx  api.test.ts  chat.test.tsx  completePortfolio.property.test.ts  correlationFromCovariance.test.ts  errorBanners.test.tsx  fixture.test.ts  optimizeFlow.test.tsx  settingsApiKeys.test.tsx  setup.ts  testUtils.tsx
scripts/: bench.py  dev.py
(+44 files in other folders)
