[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "portfolio-manager-backend"
version = "0.1.0"
description = "Portfolio Manager backend — Phase 1A (Quant Engine) + Phase 1B (Data Layer)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Portfolio Manager Project" }]
dependencies = [
  # Data layer
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0,<3",
  "pydantic-settings>=2.4.0",
  "httpx>=0.27.0",
  "aiosqlite>=0.20.0",
  "pandas>=2.2.0",
  "pandas-market-calendars>=4.4.0",
  "yfinance>=0.2.40",
  "python-dateutil>=2.9.0",
  "orjson>=3.10.0",
  # Chat (Agent E)
  "openai>=1.40,<2",
  # Quant engine
  "numpy>=2.0,<3",
  "scipy>=1.13,<2",
  "cvxpy>=1.5,<2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=5.0.0",
  "respx>=0.21.0",
  "freezegun>=1.5.0",
  "ruff>=0.6.0",
  "coverage[toml]>=7.6.0",
  "mypy>=1.10",
  # Property-based / fuzz testing (Hypothesis) and concurrency stress tests.
  "hypothesis>=6.100.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app", "quant"]

[tool.pytest.ini_options]
minversion = "8.0"
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = [
  "-ra",
  "--strict-markers",
  "--strict-config",
]
markers = [
  "live: integration tests that hit real APIs (gated by RUN_LIVE_TESTS=1)",
]
filterwarnings = [
  "ignore::DeprecationWarning:yfinance.*",
  "ignore::DeprecationWarning:pkg_resources.*",
  "ignore::DeprecationWarning:cvxpy.*",
  "ignore::DeprecationWarning:pydantic.*",
]

[tool.coverage.run]
branch = true
source = ["app", "quant"]
omit = ["app/main.py"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
  "\\.\\.\\.",
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [".venv", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
# E501: long lines — we rely on the formatter for hard wraps.
# RUF001/RUF002: the quant engine (and many comments across the backend)
# intentionally use Greek letters (α, β, σ, μ, …) as mathematical notation
# rather than ASCII lookalikes. Treating those as "ambiguous" is a false
# positive for this domain.
# UP042: the str+Enum pattern is used deliberately for wire-format enums;
# swapping to StrEnum changes semantics (bool(StrEnum.EMPTY) vs bool("")).
ignore = ["E501", "RUF001", "RUF002", "UP042"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's Depends(...) is evaluated per-request by the framework and is
# the idiomatic way to declare dependency wiring in route signatures.
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "fastapi.Body", "fastapi.Path"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "PLR0915", "PLR2004"]

[tool.mypy]
python_version = "3.11"
strict = false
files = ["quant", "app"]

[[tool.mypy.overrides]]
module = [
  "cvxpy.*",
  "scipy.*",
  "yfinance.*",
  "pandas_market_calendars.*",
  "pandas",
  "pandas.*",
]
ignore_missing_imports = true
